# modular-digital-music-array

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap-mdma.sh  build-beacon-package.yml  code.txt  collect-workspace.sh  configuration.nix  create-image-with-xbps.sh  create-mdma-image-guestfish.sh  download-test.sh  flake.nix  justfile  play-test.sh  project-manifesto.md  remove-library.sh
.cargo/: config.toml  watch.toml
.github/workflows/: build-and-package.yml  build-beacon-package.yml  build-beacon.yml  build-sd-image.yml
bases/beacon/: Cargo.toml  MIGRATION_GUIDE.md  README.md  TESTING.md
bases/beacon/src/: actions.rs  config.rs  error.rs  hardware.rs  main-provisioning.rs  main.rs  pipeline.rs  provisioning.rs  server.rs  types.rs  update.rs
bases/beacon/src/provisioning/: mod.rs  pipeline.rs  stage0_safety.rs  stage1_validate.rs  stage2_partition.rs  stage3_format.rs  stage4_install.rs  stage5_configure.rs  stage6_finalize.rs  types.rs
bases/beacon/templates/: index.html
bases/dmt-master/: Cargo.toml
bases/dmt-master/src/: main.rs
bases/download_cli/src/: Cargo.toml  app.rs  args.rs  main.rs  output.rs
bases/library_crawler/: Cargo.toml
bases/library_crawler/src/: aggregate.txt  fact_generator.rs  fact_reader.rs  fact_writer.rs  facts.jsonl  hash.rs  main.rs
bases/media_ctl/: Cargo.toml
bases/media_ctl/src/: commands.rs  main.rs
bases/playback_server/: Cargo.toml
bases/playback_server/src/: error.rs  main.rs  server.rs
components/audio_fingerprint/: Cargo.toml
components/audio_fingerprint/src/: error.rs  lib.rs  types.rs
components/clock/: Cargo.toml
components/clock/src/: commands.rs  lib.rs  protocol.rs
components/flac_metadata/: Cargo.toml
components/flac_metadata/src/: lib.rs
components/media_client/: Cargo.toml
components/media_client/src/: error.rs  lib.rs  protocol.rs  types.rs
components/media_downloader/: Cargo.toml
components/media_downloader/src/: lib.rs  metadata.rs  organization.rs  types.rs  utils.rs  ytdlp.rs
components/media_protocol/: Cargo.toml
components/media_protocol/src/: lib.rs  protocol.rs
components/music_facts/: Cargo.toml
components/music_facts/src/: lib.rs  primitives.rs  source.rs  types.rs  value.rs
components/music_primitives/: Cargo.toml
components/music_primitives/src/: bpm.rs  key.rs  lib.rs
components/playback_engine/: .gitignore  Cargo.toml  build.rs
components/playback_engine/benches/: track_loading.rs
components/playback_engine/examples/: file_leak_test.rs
components/playback_engine/src/: audio.rs  buffer.rs  channels.rs  commands.rs  error.rs  lib.rs  mixer.rs  pipewire_output.rs  position.rs  source.rs  track.rs
components/playback_primitives/: Cargo.toml
components/playback_primitives/src/: lib.rs
components/storage_primitives/: Cargo.toml
components/storage_primitives/src/: lib.rs
components/time_primitives/: Cargo.toml
components/time_primitives/src/: lib.rs
refact/beacon-scripts-refactor/: README.md  SUMMARY.md
scripts/: setup-beacon-on-pi.sh
scripts/ci/: build-beacon.sh  strip-beacon.sh
scripts/image/: create-image-with-xbps.sh  create-sd-card-simple.sh
scripts/package/: create-package.sh  create-repository.sh  serve-repository.sh  test-install.sh
scripts/utils/: bump-revision.sh  check-prerequisites.sh  get-version.sh
void-packages/srcpkgs/beacon/: template
void-packages/srcpkgs/beacon/files/beacon/: run
