[workspace]
members = [
    # Components (bricks)
    "components/clock",
    "components/time_primitives",
    "components/playback_primitives",
    "components/media_downloader",
    "components/media_client",
    "components/playback_engine",
    
    # Bases (entry points)
    "bases/download_cli",
    "bases/media_ctl"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MDMA Development Team"]
repository = "https://github.com/your-org/mdma"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
color-eyre = "0.6"
thiserror = "1.0"
parking_lot = "0.12"
assert_matches = "1.5"
