[workspace]
members = [
    # Components (bricks)
    "components/clock",
    "components/media_client",
    "components/media_downloader",
    "components/media_protocol",
    "components/playback_engine",
    "components/playback_primitives",
    "components/time_primitives",
    "components/flac_metadata",  
    # Bases (entry points)
    "bases/download_cli",
    "bases/media_ctl",
    "bases/playback_server",
    "bases/library_crawler"]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MDMA Development Team"]
repository = "https://github.com/your-org/mdma"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
color-eyre = "0.6"
thiserror = "1.0"
parking_lot = "0.12"
assert_matches = "1.5"
serde_json= "1.0"
lofty = "0.18"
