# Root Cargo.toml with beacon added
[workspace]
members = [
    # Components (bricks)
    "components/clock",
    "components/flac_metadata",  
    "components/media_client",
    "components/media_downloader",
    "components/media_protocol",
    "components/music_facts",
    "components/music_primitives",
    "components/playback_engine",
    "components/playback_primitives",
    "components/time_primitives",
    "components/audio_fingerprint",
    # Bases (entry points)
    "bases/download_cli",
    "bases/media_ctl",
    "bases/playback_server",
    "bases/library_crawler",
    "bases/beacon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MDMA Development Team"]
repository = "https://github.com/your-org/mdma"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
color-eyre = "0.6"
thiserror = "1.0"
parking_lot = "0.12"
assert_matches = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
lofty = "0.18"
chrono = "0.4"

# Beacon-specific dependencies
axum = "0.7"
askama = "0.12"
tower-http = { version = "0.5", features = ["fs"] }
clap = { version="4.5", features = ["derive"] }
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
futures = "0.3"
