# bases/beacon/Cargo.toml
[package]
name = "mdma-beacon"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "beacon"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Beacon-specific dependencies
axum = { workspace = true }
askama = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }

# Additional needed dependencies
clap = { version = "4.4", features = ["derive"] }
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
