# bases/beacon/Cargo.toml
[package]
name = "beacon"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
storage_primitives = {path="../../components/storage_primitives"}
tokio = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Beacon-specific dependencies
axum = { workspace = true }
askama = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }

# Additional needed dependencies
clap = { workspace=true, features = ["derive"] }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
async-stream = {workspace = true}
futures = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}
