[package]
name = "dmt-master"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clock = { path = "../../components/clock" }
tokio.workspace = true
rosc.workspace = true
tracing.workspace = true
color-eyre.workspace = true
