# bases/playback_server/Cargo.toml
[package]
name = "playback-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
playback-engine = { path = "../../components/playback_engine" }
media-protocol = { path = "../../components/media_protocol" }
tokio = { workspace = true, features = ["full"] }
color-eyre = { workspace = true }
nng = "1.0"
tracing = { workspace = true }
tracing-subscriber = "0.3"
serde_json = { workspace = true }
thiserror = { workspace = true }
