[package]
name = "media-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
nng = "1.0"
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
prost = "0.11"
bytes = "1.0"
async-trait = "0.1"
playback-engine = { path = "../playback_engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
