[package]
name = "media-downloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.8"
which = "4.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dunce = "1.0"
sanitize-filename = "0.5"

[dev-dependencies]
assert_matches.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
