[package]
name = "media-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
playback-primitives = { path = "../playback_primitives" }
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
