[package]
name = "playback-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
symphonia = { version = "0.5", features = ["default", "flac"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
parking_lot = { workspace = true }
crossbeam = "0.8"
time-primitives = { path = "../time_primitives" }
playback-primitives = { path = "../playback_primitives" }
tracing.workspace=true
ringbuf = "0.3"
pipewire = "0.8"
spa_sys = { package = "libspa-sys", version = "0.8" }

[build-dependencies]
hound = "3.5"    # For WAV handling
anyhow = "1.0"
symphonia = { version = "0.5", features = ["flac"] }

[[bench]]
name = "track_loading"
harness = false

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
hound = "3.5"
tracing-subscriber = "0.3"  # Add this line

[[example]]
name = "file_leak_test"
