[package]
name = "time-primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_matches.workspace = true
serde_json = "1.0"